SCRUMUS-35. Refaktoryzacja folderów