@@ -1,7 +1,3 @@
-plugins {
-    id 'org.unbroken-dome.test-sets' version '1.2.0'
-}
-
 ext.libraryVersions = [
         javaee                  : '7.0',
         wildfly                 : '8.0.0.Final',
@@ -35,32 +31,6 @@ repositories {
     maven { url 'http://repo.jfrog.org/artifactory/repo' }
 }
 
-configurations {
-    integrationTestCompile.extendsFrom testCompile
-    integrationTestRuntime.extendsFrom testRuntime
-}
-
-testSets {
-    integrationTest { dirName = 'src/it/java' }
-}
-
-sourceSets {
-    integrationTest {
-        java {
-            compileClasspath += main.output + test.output
-            runtimeClasspath += main.output + test.output
-            srcDir file('src/it/java')
-        }
-        resources.srcDir file('src/it/resources')
-    }
-}
-
-project.integrationTest {
-    outputs.upToDateWhen { false }
-}
-
-check.dependsOn integrationTest
-integrationTest.mustRunAfter test
 dependencies {
     providedCompile 'org.projectlombok:lombok:1.16.6'
     compile 'org.wildfly:wildfly-spec-api:8.0.0.Final'
@@ -72,25 +42,10 @@ dependencies {
 
     testCompile "junit:junit:${libraryVersions.junit}"
     testCompile "org.assertj:assertj-core:${libraryVersions.assertj}"
-    integrationTestCompile 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-depchain:2.1.0'
-    integrationTestCompile 'org.jboss.arquillian:arquillian-bom:1.1.10.Final'
-    integrationTestCompile 'org.jboss.arquillian.junit:arquillian-junit-container:1.1.10.Final'
-    integrationTestCompile 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-impl-gradle-embedded-archive:2.2.0'
-    integrationTestCompile 'org.jboss.logging:jboss-logging:3.1.4.GA'
-    integrationTestCompile 'org.wildfly:wildfly-arquillian-container-managed:8.2.1.Final'
+    testCompile 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-depchain:2.1.0'
+    testCompile 'org.jboss.arquillian:arquillian-bom:1.1.10.Final'
+    testCompile 'org.jboss.arquillian.junit:arquillian-junit-container:1.1.10.Final'
+    testCompile 'org.jboss.shrinkwrap.resolver:shrinkwrap-resolver-impl-gradle-embedded-archive:2.2.0'
+    testCompile 'org.jboss.logging:jboss-logging:3.1.4.GA'
+    testCompile 'org.wildfly:wildfly-arquillian-container-managed:8.2.1.Final'
 }
-
-integrationTest {
-    jvmArgs '-XX:MaxPermSize=256m'
-
-    /**
-     * Installation of JBOSS to use for testing, this can be set here
-     * or in the arquillian.xml.
-     */
-    environment 'JBOSS_HOME', rootProject.jbossHome
-    /**
-     * WildFly embedded default logging
-     */
-    systemProperty 'java.util.logging.manager', 'org.jboss.logmanager.LogManager'
-}
-
